# ToxicBackend

./: Dockerfile  db.sqlite3  manage.py  mydatabase.db  pom.xml  pyproject.toml
.github/workflows/: django.yml
ToxicBackend/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_prediction_created_at.py
src/main/kotlin/tibor/cus/toxicbackend/: ToxicBackendApplication.kt
src/main/kotlin/tibor/cus/toxicbackend/api/: ChemicalService.kt  EndpointService.kt  InferenceModelService.kt  PredictionService.kt
src/main/kotlin/tibor/cus/toxicbackend/models/: Chemical.kt  Endpoint.kt  InferenceModel.kt  Prediction.kt
src/main/kotlin/tibor/cus/toxicbackend/repository/: ChemicalRepository.kt  EndpointRepository.kt  InferenceModelRepository.kt  PredictionRepository.kt
src/main/resources/: application.properties
src/test/kotlin/tibor/cus/toxicbackend/: ToxicBackendApplicationTests.kt
