[tool.poetry]
name = "toxicbackend"
version = "0.1.0"
description = ""
authors = ["Tibor Cus <tibor.cus@itsv.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.2"
drf-yasg = "^1.21.8"
django-rest-swagger = "^2.2.0"
djangorestframework = "^3.15.2"
django-ninja = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
